@@ -11,6 +11,7 @@ documents those changes that are of interest to users and admins.
  -- Re-write sched/backfill to utilize new will-run logic in the select 
     plugins. It now supports select/cons_res and all job options (required
     nodes, excluded nodes, contiguous, etc.).
+ -- Modify scheduling logic to better support overlapping partitions.
 
 * Changes in SLURM 1.3.0-pre8
 =============================
